--- a/microservice3/Dockerfile
+++ b/microservice3/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3-slim
 WORKDIR /microservice3/app
 
 RUN pip3 install flask
+RUN pip3 install flask-Cors
 RUN pip3 install flask-mysql
 RUN pip3 install Flask-RESTful
 
